feat(runtime): 重建会话运行时并对齐云 Agent 平台契约
会话运行时重建：Turn 流水线拆分、会话四态/相位双列模型、线程账本与终态收场事件、HITL 挂起续跑。

协调租约改由 Redis 承载（owner-scoped Lua 裁决 + TTL 自过期 + 启动恢复），下线 PG 实现与二选一开关。

vault 提升为独立限界上下文：MCP 凭据按 URL 解析、OAuth 刷新与出网信任边界；对象存储下沉 shared.storage，skill 独立成域，file 一等资源化。

agent 契约收敛为 api.dto / application.dto 二分，新增 Environment / Snapshot / DeploymentRunLifecycle 服务契约与 Deployment 调度器、模型目录。

前端补齐登录与 auth store，新增 Deployments / Environments / Vaults / MemoryStores 页面，重写 http 客户端与各资源 API。

补齐单测与架构门禁（ArchUnit 分层规则、MyBatis-Plus 列引用检查），同步 docker 编排、.env.example 与 AGENTS.md。